import Header from '../Header-global/Header'
import Home from '../HomePage/Home'
import About from '../AboutPage/About'
import Contact from '../ContactPage/Contact'
import Explorer from '../ExplorerPage/Explorer'
import Region from '../RegionPage/Region'
import Country from '../CountryPage/Country'
import Footer from '../Footer-global/Footer'

// import renderer from 'react-test-renderer'
// import 'jest-styled-components'

// test('Home component renders', () => {
//   const HomeComponent = renderer.create(<Home/>).toJSON()
//   expect(HomeComponent).toMatchSnapshot()
// })


// test('Explorer component renders', () => {
//   const ExplorerComponent = renderer.create(<Explorer/>).toJSON()
//   expect(ExplorerComponent).toMatchSnapshot()
// })


// test('About component renders', () => {
//   const AboutComponent = renderer.create(<About/>).toJSON()
//   expect(AboutComponent).toMatchSnapshot()
// })


