// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`About component renders 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  margin: 250px 0 100px 0;
}

.c1 {
  width: 900px;
  border-radius: 360px;
  background-color: rgb(183,176,159);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0px 70px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0px 70px;
  margin: 15px 0 30px 0;
}

.c3 {
  font-family: 'Manrope',sans-serif;
  font-size: 32px;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  margin: 25px 0 0 0;
  color: rgb(16,23,130);
}

.c4 {
  font-family: 'Roboto',sans-serif;
  font-size: 21px;
  text-align: left;
  margin: 15px 0;
  -webkit-letter-spacing: 3px;
  -moz-letter-spacing: 3px;
  -ms-letter-spacing: 3px;
  letter-spacing: 3px;
  line-height: 1.6;
  color: rgb(60,95,60);
}

.c6 {
  color: black;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (max-width:861px) {
  .c1 {
    width: 600px;
    margin-bottom: 45px;
  }
}

@media (max-width:867px) {
  .c3 {
    font-size: 28px;
  }
}

@media (max-width:365px) {
  .c3 {
    font-size: 24px;
  }
}

@media (max-width:867px) {
  .c4 {
    font-size: 15px;
    -webkit-letter-spacing: 1px;
    -moz-letter-spacing: 1px;
    -ms-letter-spacing: 1px;
    letter-spacing: 1px;
  }
}

@media (max-width:365px) {
  .c4 {
    font-size: 15px;
  }
}

<div>
  <main
    className="c0"
  >
    <section
      className="c1"
    >
      <section
        className="c2"
      >
        <h1
          className="c3"
        >
          About
        </h1>
        <p
          className="c4"
        >
          "World Tour" allows users to take a satellite journey to both familiar and foreign lands of Earth. You can randomly teleport or get specific in your search for regional data.
        </p>
      </section>
      <section
        className="c5"
      >
        <h1
          className="c3"
        >
          Data & Tech
        </h1>
        <p
          className="c4"
        >
          This application is written in React.js and pulls data from the RESTful API at 
          <a
            className="c6"
            href="https://restcountries.eu/"
          >
            https://restcountries.eu/
          </a>
        </p>
      </section>
    </section>
  </main>
</div>
`;

exports[`Contact component renders 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  margin: 225px 0;
}

.c1 {
  width: 900px;
  border-radius: 360px;
  background-color: rgb(183,176,159);
  padding: 30px;
}

.c2 {
  font-family: 'Manrope',sans-serif;
  font-size: 32px;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  margin: 25px 0 0 0;
  color: rgb(16,23,130);
}

.c3 {
  font-family: 'Roboto',sans-serif;
  font-size: 24px;
  margin: 25px 0;
  -webkit-letter-spacing: 3px;
  -moz-letter-spacing: 3px;
  -ms-letter-spacing: 3px;
  letter-spacing: 3px;
  color: black;
}

.c4 {
  color: black;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (max-width:365px) {
  .c2 {
    font-size: 28px;
  }
}

@media (max-width:365px) {
  .c2 {
    font-size: 24px;
    margin: 10px 0 0 0;
  }
}

@media (max-width:865px) {
  .c3 {
    font-size: 15px;
  }
}

@media (max-width:365px) {
  .c3 {
    font-size: 12px;
  }
}

<div>
  <main
    className="c0"
  >
    <section
      className="c1"
    >
      <h1
        className="c2"
      >
        Contact
      </h1>
      <p
        className="c3"
      >
        Developer | Stefon Simmons
      </p>
      <p
        className="c3"
      >
        Email | 
        <a
          className="c4"
          href="mailto:stefonsimmons1@gmail.com"
        >
          stefonsimmons1@gmail.com
        </a>
      </p>
      <p
        className="c3"
      >
        GitHub | 
        <a
          className="c4"
          href="http://github.com/StefonSimmons/"
        >
          github.com/StefonSimmons
        </a>
      </p>
    </section>
  </main>
</div>
`;

exports[`Footer component renders 1`] = `
.c0 {
  position: absolute;
  bottom: 0px;
  width: 100%;
  height: .1vh;
  text-align: center;
  opacity: .9;
}

.c1 {
  background-color: rgb(28,28,28);
  padding: 1px 0;
}

.c2 {
  font-family: 'Merriweather Sans',sans-serif;
  font-size: 16px;
  color: #DAE2DF;
}

<div>
  <footer
    className="c0"
  >
    <div
      className="c1"
    >
      <h6
        className="c2"
      >
        © Stefon Simmons
      </h6>
    </div>
  </footer>
</div>
`;

exports[`Home component renders 1`] = `
.c0 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  margin: 250px 0 0 0;
  padding-bottom: 5rem;
}

.c2 {
  color: #403F4C;
}

.c1 {
  font-family: 'Montserrat',sans-serif;
  font-size: 45px;
  color: #282c34;
}

.c5 {
  margin-bottom: 0px;
  font-family: 'Manrope',sans-serif;
  font-size: 30px;
  -webkit-letter-spacing: 10px;
  -moz-letter-spacing: 10px;
  -ms-letter-spacing: 10px;
  letter-spacing: 10px;
  color: rgb(16,23,100);
}

.c6 {
  margin: 5px 0 50px 0;
  font-family: 'Montserrat',sans-serif;
  font-size: 24px;
  -webkit-letter-spacing: 20px;
  -moz-letter-spacing: 20px;
  -ms-letter-spacing: 20px;
  letter-spacing: 20px;
}

.c3 {
  font-family: 'Source Sans Pro',sans-serif;
  font-size: 90px;
  color: #282c34;
}

.c4 {
  width: 500px;
  margin-bottom: 80px;
  height: 1px;
  background-color: #1B2432;
}

@media (max-width:861px) {
  .c1 {
    font-size: 36px;
  }
}

@media (max-width:659px) {
  .c1 {
    font-size: 24px;
  }
}

@media (max-width:365px) {
  .c1 {
    font-size: 18px;
  }
}

@media (max-width:861px) {
  .c5 {
    font-size: 24px;
    -webkit-letter-spacing: 7px;
    -moz-letter-spacing: 7px;
    -ms-letter-spacing: 7px;
    letter-spacing: 7px;
  }
}

@media (max-width:659px) {
  .c5 {
    font-size: 18px;
  }
}

@media (max-width:365px) {
  .c5 {
    font-size: 15px;
    -webkit-letter-spacing: 7px;
    -moz-letter-spacing: 7px;
    -ms-letter-spacing: 7px;
    letter-spacing: 7px;
  }
}

@media (max-width:659px) {
  .c6 {
    font-size: 18px;
  }
}

@media (max-width:365px) {
  .c6 {
    font-size: 15px;
    -webkit-letter-spacing: 15px;
    -moz-letter-spacing: 15px;
    -ms-letter-spacing: 15px;
    letter-spacing: 15px;
  }
}

@media (max-width:659px) {
  .c3 {
    font-size: 24px;
  }
}

@media (max-width:365px) {
  .c3 {
    font-size: 18px;
  }
}

@media (max-width:659px) {
  .c4 {
    width: 400px;
    margin-bottom: 60px;
  }
}

@media (max-width:365px) {
  .c4 {
    width: 250px;
    margin-bottom: 60px;
  }
}

<main
  className="c0"
>
  <section>
    <h1
      className="c1"
    >
      <span
        className="c2"
      >
        Welcome Home
      </span>
       
      <span
        className="c3"
      >
        |
      </span>
       3rd-Star Explorer
    </h1>
    <hr
      className="c4"
    />
    <h2
      className="c5"
    >
      Population on Earth
    </h2>
    <p
      className="c6"
    >
      <span />
    </p>
    <h2
      className="c5"
    >
      Area of Land (mi
      <sup>
        2
      </sup>
      )
    </h2>
    <p
      className="c6"
    >
      <span />
    </p>
    <h2
      className="c5"
    >
      Recorded Regions
    </h2>
    <p
      className="c6"
    >
      <span />
    </p>
  </section>
</main>
`;

exports[`Region component renders 1`] = `
.c0 {
  font-family: 'Nunito Sans',sans-serif;
  font-size: 36px;
  -webkit-letter-spacing: 5px;
  -moz-letter-spacing: 5px;
  -ms-letter-spacing: 5px;
  letter-spacing: 5px;
  padding: 0px 5px;
  color: white;
  background-color: rgba(20,20,20,.1);
  box-shadow: 5px 10px 20px rgb(20,20,20);
}

<h2
  className="c0"
/>
`;
